--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 django-environ = "*"
 "psycopg2" = "*"
+django-compressor = "*"
+django-compressor-toolkit = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
