--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browserify": "^16.2.2",
     "bulma": "^0.7.1",
     "node-sass": "^4.9.0",
-    "postcss-cli": "^5.0.1"
+    "postcss-cli": "^5.0.1",
+    "skulpt": "^0.11.1"
   }
 }
