--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.7.1",
     "node-sass": "^4.9.0",
     "postcss-cli": "^5.0.1",
-    "skulpt": "^0.11.1"
+    "skulpt": "^0.11.1",
+    "svg.js": "^2.6.5"
   }
 }
