--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shrew",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "autoprefixer": "^8.6.2",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
