--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "bulma": "^0.7.1",
+    "codemirror-minified": "^5.37.0",
     "css-color-names": "0.0.4",
     "node-sass": "^4.9.0",
     "postcss-cli": "^5.0.1",
