--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ django-markwhat = "*"
 "django-admin-sortable2" = "*"
 micawber = "*"
 "beautifulsoup4" = "*"
+django-allauth = "*"
+django-widget-tweaks = "*"
+django-bulma = "*"
 
 [dev-packages]
 django-debug-toolbar = "*"
