--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "bulma": "^0.7.1",
+    "bulma-badge": "^2.0.0",
     "bulma-divider": "^2.0.1",
     "bulma-tooltip": "^2.0.1",
     "codemirror-minified": "^5.37.0",
