Fix recaptcha key management

--- a/env.dev.example
+++ b/env.dev.example
@@ -7,3 +7,7 @@ DJANGO_SETTINGS_MODULE=shrew.settings.dev
 
 # See https://cloudconvert.com/api
 DJANGO_CLOUDCONVERT_KEY=
+
+# Recaptcha
+DJANGO_RECAPTCHA_PUBLIC_KEY=
+DJANGO_RECAPTCHA_PRIVATE_KEY=
