--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bulma-tooltip": "^2.0.1",
     "codemirror-minified": "^5.37.0",
     "css-color-names": "0.0.4",
+    "hex-to-rgb": "^1.0.1",
     "js-cookie": "^2.2.0",
     "node-sass": "^4.9.0",
     "postcss-cli": "^5.0.1",
