--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "autoprefixer": "^8.6.2",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
@@ -16,12 +15,14 @@
     "bulma-divider": "^2.0.1",
     "bulma-tooltip": "^2.0.1",
     "codemirror-minified": "^5.37.0",
+    "core-js": "^2.5.7",
     "css-color-names": "0.0.4",
     "hex-to-rgb": "^1.0.1",
     "js-cookie": "^2.2.0",
     "node-sass": "^4.9.0",
     "postcss-cli": "^5.0.1",
     "svg.js": "^2.6.5",
-    "timeago.js": "^3.0.2"
+    "timeago.js": "^3.0.2",
+    "whatwg-fetch": "^2.0.4"
   }
 }
