--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "bulma-divider": "^2.0.1",
     "bulma-tooltip": "^2.0.1",
     "codemirror-minified": "^5.37.0",
-    "core-js": "^2.5.7",
     "css-color-names": "0.0.4",
     "hex-to-rgb": "^1.0.1",
     "js-cookie": "^2.2.0",
@@ -23,7 +22,6 @@
     "outdated-browser-rework": "^2.5.4",
     "postcss-cli": "^5.0.1",
     "svg.js": "^2.6.5",
-    "timeago.js": "^3.0.2",
-    "whatwg-fetch": "^2.0.4"
+    "timeago.js": "^3.0.2"
   }
 }
